examples/testgui/Errors/tool.tbl
T1  P1  X0  ;added by flex gui
